apps/prod/netbox/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: netbox
