apps/prod/netbox/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: netbox
  namespace: netbox
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`netbox.wilsonfi.dev`)
      kind: Rule
      services:
        - name: netbox
          port: 80
  tls:
    secretName: netbox-tls-secret
